--- a/candidates.html
+++ b/candidates.html
@@ -2,9 +2,9 @@
 <html lang="hi">
 <head>
   <meta charset="utf-8">
-  <title>Candidate Selection — Uttarakhand Reform Party</title>
+  <title>उम्मीदवार चयन — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="URP candidate selection policy, eligibility and process for Uttarakhand elections.">
+  <meta name="description" content="Uttarakhand Reform Party (URP) की साफ़ और पारदर्शी उम्मीदवार चयन नीति — योग्यता, आचरण और ज़मीनी काम के आधार पर टिकट।">
 
   <style>
     :root{
@@ -103,6 +103,22 @@
 
     .section{
       padding:30px 0;
+    }
+    .section-header{
+      display:flex;
+      flex-wrap:wrap;
+      justify-content:space-between;
+      gap:10px;
+      margin-bottom:16px;
+    }
+    .section-header h2{
+      font-size:22px;
+      color:#111827;
+    }
+    .section-header p{
+      font-size:13px;
+      color:var(--muted);
+      max-width:420px;
     }
     .two-col{
       display:grid;
@@ -205,11 +221,11 @@
     <!-- HERO -->
     <section class="hero">
       <div class="container">
-        <div class="hero-kicker">CANDIDATES • TICKET POLICY</div>
-        <h1 class="hero-title">साफ़ criteria, data-based selection — यही URP की candidate नीति</h1>
+        <div class="hero-kicker">उम्मीदवार • टिकट नीति</div>
+        <h1 class="hero-title">साफ़ और पारदर्शी चयन प्रक्रिया — यही URP की उम्मीदवार नीति</h1>
         <p class="hero-sub">
-          URP में ticket “किसी के कहने” से नहीं, बल्कि स्पष्ट eligibility, ground काम और public feedback के आधार पर दिया जाएगा।
-          हमारा लक्ष्य है कि हर seat पर जनता को <strong>ईमानदार, सक्षम और connected उम्मीदवार</strong> मिले।
+          URP में टिकट किसी दबाव या सिफ़ारिश से नहीं, बल्कि साफ़ छवि, ज़मीनी काम और जनता के भरोसे के आधार पर दिया जाएगा।
+          लक्ष्य यह है कि हर क्षेत्र को ऐसा उम्मीदवार मिले जिस पर लोग निश्चिंत होकर भरोसा कर सकें।
         </p>
       </div>
     </section>
@@ -219,27 +235,27 @@
       <div class="container two-col">
         <div>
           <div class="card">
-            <h3>Eligibility (योग्यता)</h3>
+            <h3>उम्मीदवार के लिए आवश्यक योग्यता</h3>
             <ul class="timeline">
-              <li>उम्मीदवार 25+ वर्ष का हो और संबंधित सीट में मजबूत connect हो (voter / निवासी / लंबे समय से काम)।</li>
-              <li>साफ़ public image — किसी serious corruption या हिंसक crime में दोषी न हो।</li>
-              <li>कम से कम 2–3 साल का सामाजिक काम / public service experience (NGO, army, education, health, youth work आदि)।</li>
-              <li>URP के core values और manifesto पर लिखित सहमति।</li>
+              <li>उम्र कम-से-कम 25 वर्ष हो और संबंधित विधानसभा से मज़बूत जुड़ाव हो (मतदाता, निवासी या लंबे समय से सामाजिक कार्य)।</li>
+              <li>साफ़ सार्वजनिक छवि — किसी बड़े भ्रष्टाचार या हिंसक अपराध में दोषी न हों।</li>
+              <li>कम-से-कम 2–3 वर्ष का सामाजिक या सार्वजनिक काम का अनुभव (जैसे शिक्षा, स्वास्थ्य, युवाओं के साथ काम, किसान या मज़दूर मुद्दे आदि)।</li>
+              <li>URP के मूल मूल्यों, संविधान और कानून के प्रति स्पष्ट सम्मान और लिखित सहमति।</li>
             </ul>
           </div>
         </div>
 
         <div>
           <div class="card">
-            <h3>Negative List (जो स्वीकार्य नहीं होगा)</h3>
+            <h3>ऐसे लोग जिन्हें टिकट नहीं दिया जाएगा</h3>
             <ul class="timeline">
-              <li>गंभीर आपराधिक मामलों में convicted व्यक्ति (murder, rape, major corruption)।</li>
-              <li>दंगे/सांप्रदायिक हिंसा को बढ़ावा देने का documented इतिहास।</li>
-              <li>बार-बार party बदलने वाले “professionals of politics” जिनका कोई ground base नहीं।</li>
+              <li>गंभीर आपराधिक मामलों (हत्या, बलात्कार, बड़े घोटाले आदि) में दोषी या बार-बार आरोपित व्यक्ति।</li>
+              <li>धर्म, जाति या क्षेत्र के नाम पर नफ़रत फैलाने का स्पष्ट और दोहराया गया इतिहास।</li>
+              <li>लगातार दल बदलने वाले ऐसे लोग जिनका किसी क्षेत्र में स्थायी जनाधार या सामाजिक काम स्पष्ट न हो।</li>
             </ul>
             <div class="tag-row">
-              <div class="tag">Clean image</div>
-              <div class="tag">Zero-tolerance crime</div>
+              <div class="tag">साफ़ छवि</div>
+              <div class="tag">घृणा-राजनीति से दूरी</div>
             </div>
           </div>
         </div>
@@ -250,50 +266,55 @@
     <section class="section">
       <div class="container">
         <div class="section-header">
-          <h2>Selection Process (कैसे चुने जाएँगे उम्मीदवार?)</h2>
-          <p>Seat-wise transparent process ताकि volunteers, workers और आम जनता देख सके कि ticket fair तरीके से दिया गया है।</p>
+          <h2>उम्मीदवार कैसे चुने जाएँगे?</h2>
+          <p>
+            प्रक्रिया का लक्ष्य यह है कि कार्यकर्ता और आम मतदाता दोनों महसूस करें कि टिकट ईमानदारी से दिया गया है,
+            किसी छुपे दबाव या सौदेबाज़ी से नहीं।
+          </p>
         </div>
         <div class="two-col">
           <div class="card">
-            <h4>Step 1 — Expression of Interest</h4>
+            <h4>चरण 1 — रुचि दर्ज करना</h4>
             <p class="small">
-              इच्छुक उम्मीदवार पहले <strong>URP सदस्य</strong> बनते हैं, फिर अलग से “Candidate Interest Form” भरते हैं 
-              (विधानसभा, background, काम का अनुभव, vision आदि)।
+              जो लोग भविष्य में URP से चुनाव लड़ना चाहते हैं, वे सबसे पहले पार्टी के सक्रिय सदस्य बनेंगे। 
+              इसके बाद उनसे अलग से लिखित रूप में जानकारी ली जाएगी — वे किस सीट से लड़ना चाहते हैं, अब तक का सामाजिक काम क्या है,
+              और अपने क्षेत्र के लिए उनकी सोच क्या है।
             </p>
             <ul class="timeline">
-              <li>Local टीम candidate से initial discussion करती है।</li>
-              <li>Basic background verification (social media, ground feedback)।</li>
+              <li>स्थानीय टीम उम्मीदवार से प्रारम्भिक बातचीत करके बुनियादी जानकारी समझेगी।</li>
+              <li>उम्मीदवार के सार्वजनिक व्यवहार और काम के बारे में लोगों से सामान्य प्रतिक्रिया ली जाएगी।</li>
             </ul>
           </div>
 
           <div class="card">
-            <h4>Step 2 — Ground Feedback & Survey</h4>
+            <h4>चरण 2 — ज़मीनी प्रतिक्रिया</h4>
             <p class="small">
-              हर संभावित उम्मीदवार पर booth / ward स्तर पर छोटा survey — “क्या आप इन्हें अपने क्षेत्र का प्रतिनिधि मानते हैं?”
+              केवल कागज़ पर नहीं, क्षेत्र के लोगों से बातचीत करके देखा जाएगा कि जो व्यक्ति टिकट चाहता है,
+              क्या उसे लोग सच में अपना प्रतिनिधि मानते हैं या नहीं।
             </p>
             <ul class="timeline">
-              <li>Local volunteers और digital survey दोनों का उपयोग।</li>
-              <li>Feedback summary लिखित रूप में candidate के साथ share होगी।</li>
+              <li>स्थानीय कार्यकर्ताओं, युवाओं, महिलाओं और विभिन्न समुदायों से खुली बातचीत।</li>
+              <li>मुद्दों पर उम्मीदवार की समझ और लोगों के साथ उसके व्यवहार पर विशेष ध्यान।</li>
             </ul>
           </div>
 
           <div class="card">
-            <h4>Step 3 — Panel Evaluation</h4>
+            <h4>चरण 3 — समिति द्वारा समीक्षा</h4>
             <p class="small">
-              District व state level committee candidate का evaluation matrix पर score तय करती है:
+              ज़िला और राज्य स्तर की मिलीजुली समिति उम्मीदवार के बारे में प्राप्त जानकारी की समीक्षा करेगी।
             </p>
             <ul class="timeline">
-              <li>Public image & clean record</li>
-              <li>Ground work & volunteer management</li>
-              <li>Subject knowledge (local issues, policy)</li>
-              <li>Winning potential (data + survey)</li>
+              <li>छवि और आचरण — क्या व्यक्ति लोगों के बीच भरोसेमंद माना जाता है?</li>
+              <li>ज़मीनी काम — क्या उसने अपने क्षेत्र में लगातार और गंभीर काम किया है?</li>
+              <li>टीम के साथ काम करने की क्षमता — क्या वह स्वयंसेवकों और कार्यकर्ताओं के साथ समन्वय बना पाता है?</li>
             </ul>
           </div>
 
           <div class="card">
-            <h4>Step 4 — Final Announcement</h4>
+            <h4>चरण 4 — घोषणा और जवाबदेही</h4>
             <p class="small">
-              Ticket final होते ही public website पर candidate details, background और संपर्क जानकारी open रखी जाएगी ताकि transparency बनी रहे।
+              टिकट तय होने के बाद उम्मीदवार की मुख्य जानकारी, पृष्ठभूमि और सार्वजनिक संकल्प पार्टी की वेबसाइट और सार्वजनिक मंचों पर साझा की जाएगी,
+              ताकि लोग साफ़-साफ़ जान सकें कि उन्हें किस आधार पर चुना गया है।
             </p>
           </div>
         </div>
@@ -304,15 +325,19 @@
     <section class="section">
       <div class="container">
         <div class="card">
-          <h3>क्या आप भविष्य में URP से चुनाव लड़ना चाहते हैं?</h3>
+          <h3>भविष्य में URP से चुनाव लड़ने की इच्छा है?</h3>
           <p class="small" style="margin-top:4px;">
-            अभी के लिए पहला step simple है — <strong>URP सदस्य बनें</strong>, ground काम शुरू करें और अपने क्षेत्र के लोगों के साथ 
-            लगातार contact में रहें। जब आधिकारिक रूप से candidate application खोला जाएगा, तो registered members को 
-            email / WhatsApp के ज़रिए सूचना दी जाएगी।
+            अभी पहला और सबसे महत्वपूर्ण क़दम यह है कि आप <strong>सक्रिय सदस्य</strong> के रूप में जुड़ें,
+            अपने क्षेत्र में लगातार काम शुरू करें और लोगों के बीच अपना भरोसेमंद रिश्ता बनाएं।
+          </p>
+          <p class="small" style="margin-top:6px;">
+            आने वाले समय में जब उम्मीदवारों के लिए औपचारिक आवेदन प्रक्रिया शुरू की जाएगी,
+            तो पहले से जुड़े और काम कर रहे सदस्यों को ईमेल / फ़ोन / WhatsApp के माध्यम से जानकारी दी जाएगी।
           </p>
           <p class="small" style="margin-top:8px;">
-            👉 <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join पेज</a> पर जाएँ, membership form भरें 
-            और district team के संपर्क में रहें।
+            👉 शुरुआत यहीं से करें — 
+            <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join पेज</a> पर जाएँ,
+            सदस्यता फ़ॉर्म भरें और अपने ज़िले की टीम के संपर्क में रहें।
           </p>
         </div>
       </div>
@@ -324,14 +349,14 @@
     <div class="container footer-grid">
       <div>
         <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">Reform-focused political platform for Uttarakhand.</div>
+        <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
       </div>
       <div class="small">
         <div>Contact: contact@uttarakhandreform.org</div>
         <div>Phone: +91 98765 43210</div>
       </div>
       <div class="small">
-        <div><a href="join.html">Volunteer / Join</a></div>
+        <div><a href="join.html">सदस्य / स्वयंसेवक के रूप में जुड़ें</a></div>
       </div>
     </div>
   </footer>
