--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,9 @@
 <html lang="hi">
 <head>
   <meta charset="utf-8">
-  <title>Contact — Uttarakhand Reform Party</title>
+  <title>संपर्क — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Contact details for Uttarakhand Reform Party (URP) — email, phone and district coordination.">
+  <meta name="description" content="Uttarakhand Reform Party (URP) से सुझाव, शिकायत या सहयोग के लिए संपर्क करें — ईमेल, फ़ोन और ज़िला समन्वय की जानकारी।">
 
   <style>
     :root{
@@ -160,38 +160,75 @@
 </header>
 
 <main>
+  <!-- HERO -->
   <section class="hero">
     <div class="container">
-      <div class="hero-kicker">CONTACT • CONNECT WITH URP</div>
-      <h1 class="hero-title">हमसे संपर्क करें</h1>
+      <div class="hero-kicker">संपर्क • URP से जुड़ें</div>
+      <h1 class="hero-title">हमसे सीधे संपर्क करें</h1>
       <p class="hero-sub">
-        सुझाव, शिकायत या सहयोग के लिए हमसे सीधे संपर्क करें। आपका feedback URP की policies को मजबूत करेगा।
+        सुझाव, शिकायत, स्थानीय समस्या, शोध-विचार या सहयोग — किसी भी विषय पर आप URP तक सीधे पहुँचे।
+        आपका feedback और आपका अनुभव ही आने वाले समय में बेहतर नीतियाँ बनाने की सबसे बड़ी ताकत होगा।
       </p>
     </div>
   </section>
 
+  <!-- CONTACT CARDS -->
   <section class="section">
     <div class="container grid">
       <div class="card">
-        <h3>Central Contact</h3>
+        <h3>केंद्रीय संपर्क (राज्य स्तर)</h3>
         <p class="small">
-          Email: contact@uttarakhandreform.org<br>
-          Phone: +91 98765 43210<br>
-          Timing: 10:00 AM – 6:00 PM
+          <strong>ईमेल:</strong> contact@uttarakhandreform.org<br>
+          <strong>फ़ोन:</strong> +91 98765 43210<br>
+          <strong>समय:</strong> सुबह 10:00 बजे से शाम 6:00 बजे तक (सोमवार–शनिवार)
+        </p>
+        <p class="small" style="margin-top:8px;">
+          यहाँ से आपका संदेश संबंधित ज़िले या टीम तक भेजा जाएगा।  
+          कृपया विषय स्पष्ट लिखें — जैसे “सुझाव”, “शिकायत”, “स्थानीय समस्या”, “स्वयंसेवक के रूप में जुड़ना” आदि।
         </p>
       </div>
 
       <div class="card">
-        <h3>District Coordination</h3>
+        <h3>ज़िला समन्वय</h3>
         <p class="small">
-          अपना जिला और विधानसभा लिखकर email करें। संबंधित coordinator आपसे संपर्क करेगा।
+          हर ज़िले में एक <strong>ज़िला समन्वयक</strong> होगा जो सदस्यता, स्वयंसेवकों और स्थानीय बैठकों का समन्वय करेगा।
+        </p>
+        <p class="small" style="margin-top:6px;">
+          अभी के लिए कृपया अपने ईमेल में ज़िले और विधानसभा का नाम ज़रूर लिखें।  
+          संबंधित टीम का सदस्य आपकी सुविधानुसार फ़ोन या WhatsApp के माध्यम से आपसे संपर्क करेगा।
         </p>
       </div>
 
       <div class="card">
-        <h3>Social Media</h3>
+        <h3>सोशल मीडिया व अपडेट</h3>
         <p class="small">
-          Official pages जल्द launch किए जाएंगे।
+          आधिकारिक सोशल मीडिया पेज और चैनल चरणबद्ध तरीके से शुरू किए जाएँगे।  
+          जैसे ही वे सक्रिय होंगे, उनकी जानकारी इसी पेज पर साझा की जाएगी।
+        </p>
+        <p class="small" style="margin-top:6px;">
+          लक्ष्य यह रहेगा कि नीति-संबंधी जानकारी, छोटे वीडियो, पहाड़ से ग्राउंड रिपोर्ट और
+          महत्त्वपूर्ण घोषणाएँ समय-समय पर सार्वजनिक रूप से साझा की जाएँ।
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FEEDBACK NOTE -->
+  <section class="section">
+    <div class="container">
+      <div class="card">
+        <h3>स्थानीय समस्या या ग्राउंड रिपोर्ट भेजना चाहते हैं?</h3>
+        <p class="small" style="margin-top:4px;">
+          सड़क, पानी, स्कूल, अस्पताल, जंगल, पलायन, रोज़गार या अन्य किसी स्थानीय मुद्दे पर
+          आप विस्तार से अपना अनुभव साझा करना चाहें तो कृपया:
+        </p>
+        <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
+          <li>ईमेल के विषय (Subject) में ज़िला और विधानसभा का नाम लिखें।</li>
+          <li>समस्या क्या है, उससे लोगों पर क्या असर पड़ रहा है और आपके अनुसार समाधान क्या हो सकता है — यह बिंदुवार लिखें।</li>
+          <li>यदि उपलब्ध हों तो फ़ोटो या संबंधित दस्तावेज़ भी साथ में संलग्न करें।</li>
+        </ul>
+        <p class="small" style="margin-top:6px;">
+          इस तरह से मिलने वाली जानकारी को नीति-निर्माण और भविष्य की जनघोषणाओं में ध्यान में रखा जाएगा।
         </p>
       </div>
     </div>
@@ -200,8 +237,14 @@
 
 <footer class="footer">
   <div class="container footer-grid">
-    <div>© 2025 Uttarakhand Reform Party</div>
-    <div>contact@uttarakhandreform.org</div>
+    <div>
+      <div>© 2025 Uttarakhand Reform Party</div>
+      <div class="small">उत्तराखंड के लिए सुधार-केंद्रित राजनीतिक मंच।</div>
+    </div>
+    <div class="small">
+      <div>contact@uttarakhandreform.org</div>
+      <div>फ़ोन: +91 98765 43210</div>
+    </div>
   </div>
 </footer>
 
