--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Uttarakhand Reform Party (URP) — Official Website</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="URP पहाड़-केंद्रित विकास, पारदर्शी शासन, युवाओं के रोज़गार, महिलाओं की सुरक्षा और ग्रामीण आजीविका पर ध्यान देने वाला सुधारवादी राजनीतिक मंच है।">
+  <meta name="description" content="URP is a reform-focused political platform committed to transparent governance, mountain-first development, youth leadership, women’s safety and rural livelihoods in Uttarakhand.">
 
   <style>
     :root{
@@ -100,7 +100,7 @@
       margin-bottom:8px;
     }
     .hero-title{
-      font-size:34px;
+      font-size:32px;
       line-height:1.2;
       color:var(--primary);
       margin-bottom:10px;
@@ -298,6 +298,47 @@
       color:#111827;
     }
 
+    .small{font-size:12px;color:var(--muted);}
+
+    /* 6 PILLARS SLIDER */
+    .pillars-slider{
+      position:relative;
+      overflow:hidden;
+      border-radius:16px;
+    }
+    .pillars-track{
+      display:flex;
+      transition:transform 0.45s ease;
+    }
+    .pillar-slide{
+      min-width:100%;
+      flex-shrink:0;
+      padding-right:4px;
+      box-sizing:border-box;
+    }
+    .pillar-slide .card{
+      height:100%;
+    }
+    .slider-dots{
+      display:flex;
+      justify-content:center;
+      gap:6px;
+      margin-top:10px;
+    }
+    .slider-dot{
+      width:8px;
+      height:8px;
+      border-radius:999px;
+      background:#d1d5db;
+      border:none;
+      padding:0;
+      cursor:pointer;
+    }
+    .slider-dot.active{
+      width:18px;
+      background:var(--primary-soft);
+    }
+
     /* FOOTER */
     .footer{
       background:#0b2b4a;
@@ -314,12 +355,17 @@
     }
     .footer a{color:#e5e7eb}
 
-    .small{font-size:12px;color:var(--muted);}
-
     @media (max-width:800px){
       .navlinks{display:none;}
       .hero-grid{flex-direction:column;}
       .two-col{grid-template-columns:1fr;}
+    }
+
+    @media (min-width:900px){
+      /* On larger screens keep cards narrower inside slider */
+      .pillar-slide{
+        padding:0 60px;
+      }
     }
   </style>
 </head>
@@ -348,43 +394,46 @@
     <section class="hero">
       <div class="container hero-grid">
         <div class="hero-main">
-          <div class="hero-kicker">उत्तराखंड रिफ़ॉर्म पार्टी • URP</div>
-          <h1 class="hero-title">बदलाव भी, ज़िम्मेदारी भी — एक नया उत्तराखंड</h1>
+          <div class="hero-kicker">UTTARAKHAND REFORM PARTY • URP</div>
+          <h1 class="hero-title">Accountable politics for a mountain state</h1>
           <p class="hero-sub">
-            25 साल में सरकारें बदलीं, पर सिस्टम नहीं। URP का लक्ष्य है पारदर्शी शासन, पहाड़-केंद्रित विकास
-            और युवा-नेतृत्व वाला साफ़ बदलाव।
+            URP is a reform-focused political platform committed to transparent governance,
+            mountain-first development and youth-led leadership so that ordinary citizens
+            can see real, measurable change in daily life.
           </p>
 
           <div class="badge-row">
-            <div class="badge">पहाड़-केंद्रित विकास</div>
-            <div class="badge">पारदर्शी शासन</div>
-            <div class="badge">युवा और महिला सशक्तिकरण</div>
+            <div class="badge">Mountain-first development</div>
+            <div class="badge">Transparent governance</div>
+            <div class="badge">Youth & women leadership</div>
           </div>
 
           <div class="cta-row">
-            <a href="join.html" class="btn-primary">URP से जुड़ें</a>
-            <a href="vision.html" class="btn-ghost">हमारा विज़न देखें</a>
+            <a href="join.html" class="btn-primary">Join URP</a>
+            <a href="vision.html" class="btn-ghost">Read our vision</a>
           </div>
 
-          <!-- ⬇️ यहां से strategic numbers हटा कर generic public lines रखी गई हैं -->
           <div class="hero-meta">
-            <div>पूरे उत्तराखंड में मज़बूत, अनुशासित और जवाबदेह संगठन बनाने की शुरुआत।</div>
-            <div>काम, ईमानदारी और जनभागीदारी पर आधारित नई राजनीतिक संस्कृति की पहल।</div>
+            <div><strong>People-first</strong> approach across villages, towns and cities</div>
+            <div><strong>Public reporting</strong> and transparent decision-making</div>
           </div>
         </div>
 
         <div class="hero-side">
           <div class="hero-card">
-            <h3>100-दिन का सुधार कार्यक्रम</h3>
-            <p>पहले 100 दिनों में ऐसा काम जो कागज़ पर नहीं, लोगों की नज़रों में साफ़ दिखे — नापे जा सकने वाले परिणाम।</p>
+            <h3>Early reform priorities</h3>
+            <p>
+              URP’s focus is on basic services first — roads, water, health, schools and local livelihoods —
+              with clear timelines and public tracking of progress.
+            </p>
             <div class="hero-kpi">
               <div class="hero-kpi-item">
-                <span>100+</span>
-                पहाड़ी गाँवों में प्राथमिक सर्वे
+                <span>Local</span>
+                Issues mapped with ground feedback
               </div>
               <div class="hero-kpi-item">
-                <span>24×7</span>
-                ऑनलाइन शिकायत व ट्रैकिंग पोर्टल
+                <span>Open</span>
+                Work reports shared with citizens
               </div>
             </div>
           </div>
@@ -392,82 +441,149 @@
       </div>
     </section>
 
-    <!-- 6 PILLARS -->
+    <!-- 6 PILLARS (SLIDER) -->
     <section class="section">
       <div class="container">
         <div class="section-header">
-          <h2>URP के 6 मुख्य आधार</h2>
+          <h2>URP’s six core pillars</h2>
           <p>
-            URP केवल नारों से नहीं, स्पष्ट और मज़बूत आधारों पर चलता है। हर आधार के लिए ठोस और मापनीय वादे होंगे,
-            जिनकी सार्वजनिक निगरानी होगी।
+            URP wants citizens to judge us by clear pillars, not just by slogans. These six pillars guide
+            our priorities, policies and candidates.
           </p>
         </div>
-        <div class="grid">
-          <div class="card">
-            <h3>1. पारदर्शी शासन</h3>
-            <p>हर काम की तस्वीर, स्थान-चिह्न, खर्च और समय-सीमा — सब एक सार्वजनिक ऑनलाइन डैशबोर्ड पर।</p>
-            <div class="tag-row">
-              <div class="tag">ऑनलाइन ट्रैकिंग</div>
-              <div class="tag">जनता ऑडिट</div>
+
+        <div class="pillars-slider">
+          <div class="pillars-track" id="pillarsTrack">
+            <!-- 1 -->
+            <div class="pillar-slide">
+              <article class="card">
+                <h3>1. Transparent governance</h3>
+                <p>
+                  Public money should be traceable. Projects, costs and timelines must be visible to citizens
+                  through simple online dashboards and periodic reports.
+                </p>
+                <div class="tag-row">
+                  <div class="tag">Public dashboards</div>
+                  <div class="tag">Citizen oversight</div>
+                </div>
+              </article>
             </div>
-          </div>
-          <div class="card">
-            <h3>2. पहाड़-केंद्रित नीति</h3>
-            <p>सिर्फ़ मैदानी नहीं — पहाड़ी क्षेत्रों के लिए अलग योजना, अलग बजट और सर्वोच्च प्राथमिकता।</p>
-            <div class="tag-row">
-              <div class="tag">पलायन रोकने पर फ़ोकस</div>
-              <div class="tag">गाँव क्लस्टर मॉडल</div>
+            <!-- 2 -->
+            <div class="pillar-slide">
+              <article class="card">
+                <h3>2. Mountain-first planning</h3>
+                <p>
+                  Hill regions need different solutions from plains. URP supports separate planning, budgeting
+                  and implementation focus for mountain blocks and remote areas.
+                </p>
+                <div class="tag-row">
+                  <div class="tag">Anti-migration focus</div>
+                  <div class="tag">Village clusters</div>
+                </div>
+              </article>
             </div>
-          </div>
-          <div class="card">
-            <h3>3. युवा सशक्तिकरण</h3>
-            <p>स्किल सेंटर, स्थानीय रोज़गार मानचित्र और स्टार्टअप सहयोग — “10 किमी दायरे में रोज़गार” मॉडल।</p>
-          </div>
-          <div class="card">
-            <h3>4. महिला सुरक्षा व सम्मान</h3>
-            <p>मार्केट, स्कूल, बस-स्टैंड: बेहतर रोशनी, CCTV, हेल्प-डेस्क और तेज़ प्रतिक्रिया प्रणाली।</p>
-          </div>
-          <div class="card">
-            <h3>5. ग्रामीण आजीविका</h3>
-            <p>पर्यटन, बागवानी, जड़ी-बूटी समूह — रोज़गार गाँव से ही, पलायन मजबूरी नहीं।</p>
-          </div>
-          <div class="card">
-            <h3>6. स्वच्छ राजनीति</h3>
-            <p>टिकट “सिफ़ारिश” से नहीं, साफ़ मानदंड से — गंभीर आपराधिक पृष्ठभूमि वालों को जगह नहीं।</p>
+            <!-- 3 -->
+            <div class="pillar-slide">
+              <article class="card">
+                <h3>3. Youth empowerment</h3>
+                <p>
+                  Young people should not have to leave Uttarakhand for every opportunity. Skills, entrepreneurship
+                  and local employment are central to our approach.
+                </p>
+                <div class="tag-row">
+                  <div class="tag">Skill & jobs</div>
+                  <div class="tag">Local enterprises</div>
+                </div>
+              </article>
+            </div>
+            <!-- 4 -->
+            <div class="pillar-slide">
+              <article class="card">
+                <h3>4. Women’s safety & dignity</h3>
+                <p>
+                  Markets, schools, workplaces and public transport must be safer and more supportive for women,
+                  with better infrastructure and responsive systems.
+                </p>
+                <div class="tag-row">
+                  <div class="tag">Safe spaces</div>
+                  <div class="tag">Support systems</div>
+                </div>
+              </article>
+            </div>
+            <!-- 5 -->
+            <div class="pillar-slide">
+              <article class="card">
+                <h3>5. Rural livelihoods</h3>
+                <p>
+                  Tourism, horticulture, forests and local services can create dignified livelihoods in villages,
+                  so that migration becomes a choice, not a compulsion.
+                </p>
+                <div class="tag-row">
+                  <div class="tag">Village economy</div>
+                  <div class="tag">Local value chains</div>
+                </div>
+              </article>
+            </div>
+            <!-- 6 -->
+            <div class="pillar-slide">
+              <article class="card">
+                <h3>6. Clean and responsible politics</h3>
+                <p>
+                  Candidates and office-bearers should meet basic standards of integrity, public conduct and
+                  accountability, with no space for serious criminal backgrounds.
+                </p>
+                <div class="tag-row">
+                  <div class="tag">Integrity</div>
+                  <div class="tag">Public accountability</div>
+                </div>
+              </article>
+            </div>
           </div>
         </div>
+        <div class="slider-dots" id="pillarsDots"></div>
       </div>
     </section>
 
-    <!-- WHY NEW PARTY / LONG-TERM PREP -->
+    <!-- WHY NEW OPTION / HOW WE WORK -->
     <section class="section">
       <div class="container two-col">
         <div>
           <div class="section-header">
-            <h2>क्यों चाहिए नया विकल्प?</h2>
+            <h2>Why does Uttarakhand need a new option?</h2>
           </div>
           <p class="small" style="margin-bottom:10px;">
-            BJP और Congress दोनों ने उत्तराखंड पर शासन किया, लेकिन आज भी पलायन, बेरोज़गारी, स्वास्थ्य और शिक्षा के
-            मुद्दे वहीं हैं। URP मानता है — “पुरानी राजनीति से नया भविष्य नहीं बन सकता।”
+            For many families, the big issues remain the same: migration, unemployment, basic services,
+            health, schools and fragile environments. URP believes that citizens deserve a calm, honest
+            and accountable alternative.
           </p>
           <ul class="timeline">
-            <li>पिछले दो दशकों के काम-काज का ईमानदार रिपोर्ट-कार्ड — सिर्फ़ सीट गणित नहीं, काम का हिसाब।</li>
-            <li>UKD जैसी क्षेत्रीय भावना को आधुनिक, पेशेवर ढाँचे के साथ मज़बूत करना — विरोध नहीं, सहयोग।</li>
-            <li>निर्णय-प्रक्रिया में youth, women और professionals को पहली लाइन में लाना।</li>
+            <li>Focus on everyday issues, not just headline politics.</li>
+            <li>Respect for regional identity and aspirations of hill and plain regions.</li>
+            <li>Greater space for youth, women and professionals in decision-making.</li>
           </ul>
         </div>
         <div>
           <div class="section-header">
-            <!-- ⬇️ यहां से “Target 2027 / numbers” हटाकर generic heading रखी है -->
-            <h2>लंबी अवधि की तैयारी</h2>
+            <h2>How URP wants to work</h2>
           </div>
-
-          <!-- ⬇️ stats-row (50 seats / 10,000+ volunteers / 13 teams) पूरा हटा दिया गया है -->
-
+          <div class="stats-row">
+            <div class="stat">
+              <span>Approach</span>
+              <strong>People-first</strong>
+            </div>
+            <div class="stat">
+              <span>Style</span>
+              <strong>Calm & factual</strong>
+            </div>
+            <div class="stat">
+              <span>Commitment</span>
+              <strong>Honest reports</strong>
+            </div>
+          </div>
           <ul class="timeline" style="margin-top:10px;">
-            <li>Phase 1: सदस्यता, volunteer network और digital presence को मज़बूत करना।</li>
-            <li>Phase 2: seat-wise survey, स्थानीय मुद्दों की mapping और संभावित उम्मीदवारों की पहचान।</li>
-            <li>Phase 3: सार्वजनिक जन-संपर्क, manifesto और बूथ-स्तर पर मज़बूत संगठन तैयार करना।</li>
+            <li>Listen to citizens and volunteers before drafting policies.</li>
+            <li>Base decisions on ground data, surveys and local knowledge.</li>
+            <li>Share work reports in simple language that people can understand and question.</li>
           </ul>
         </div>
       </div>
@@ -477,29 +593,46 @@
     <section class="section">
       <div class="container">
         <div class="section-header">
-          <h2>तुरंत कैसे जुड़ें?</h2>
-          <p>URP में जुड़ने की प्रक्रिया साफ़, digital और पारदर्शी है — कोई hidden membership या बंद कमरों वाली politics नहीं।</p>
+          <h2>How can you join URP?</h2>
+          <p>
+            Joining URP is a simple and transparent digital process. You can start as a supporter, volunteer
+            or local organiser and grow your role over time.
+          </p>
         </div>
         <div class="grid">
           <div class="card">
-            <h4>1. ऑनलाइन सदस्यता फ़ॉर्म</h4>
-            <p>Join पेज पर Google Form भरें (नाम, mobile, EPIC, ज़िला)। Data सीधे सुरक्षित Google Sheet में जाता है।</p>
+            <h4>1. Fill the online membership form</h4>
+            <p>
+              Visit the Join page and submit the Google Form with your basic details
+              (name, mobile number, voter details, district and area).
+            </p>
           </div>
           <div class="card">
-            <h4>2. Verification व भूमिका</h4>
-            <p>District coordinator WhatsApp / कॉल से संपर्क कर आपकी भूमिका और उपलब्धता समझेगा।</p>
+            <h4>2. Connect with the coordination team</h4>
+            <p>
+              A coordinator will connect with you over call or WhatsApp to understand your background,
+              time availability and interest areas.
+            </p>
           </div>
           <div class="card">
-            <h4>3. लोकल टीम में शामिल</h4>
-            <p>आपको आपके विधानसभा क्षेत्र की ground टीम में जोड़ा जाएगा — बूथ, वार्ड या गाँव स्तर पर।</p>
+            <h4>3. Join a local team</h4>
+            <p>
+              You can be part of village, ward or booth-level teams, or contribute to communication,
+              research, events and other activities.
+            </p>
           </div>
           <div class="card">
-            <h4>4. Candidate Track (विकल्प)</h4>
-            <p>जो लोग चुनाव लड़ना चाहते हैं, उनके लिए अतिरिक्त eligibility, survey और public feedback प्रक्रिया होगी।</p>
+            <h4>4. Grow your responsibility</h4>
+            <p>
+              As you contribute regularly, you may be considered for higher responsibilities in local,
+              district or state-level structures.
+            </p>
           </div>
         </div>
         <p class="small" style="margin-top:10px;">
-          तैयार हैं ज़िम्मेदारी लेने के लिए? <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join पेज</a> पर जाएँ और form भरें।
+          Ready to participate in constructive politics? Go to the
+          <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join page</a>
+          and submit the form.
         </p>
       </div>
     </section>
@@ -510,7 +643,7 @@
     <div class="container footer-grid">
       <div>
         <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">Reform-focused political platform for Uttarakhand.</div>
+        <div class="small">A reform-focused political platform for Uttarakhand.</div>
       </div>
       <div class="small">
         <div>Contact: contact@uttarakhandreform.org</div>
@@ -518,10 +651,61 @@
       </div>
       <div class="small">
         <div><a href="join.html">Volunteer / Join</a></div>
-        <div><a href="candidates.html">Apply as Candidate</a></div>
+        <div><a href="candidates.html">Express interest as a candidate</a></div>
       </div>
     </div>
   </footer>
+
+  <!-- SLIDER SCRIPT -->
+  <script>
+    (function(){
+      var track = document.getElementById('pillarsTrack');
+      var dotsWrap = document.getElementById('pillarsDots');
+      if(!track || !dotsWrap) return;
+
+      var slides = Array.prototype.slice.call(track.querySelectorAll('.pillar-slide'));
+      if(!slides.length) return;
+
+      var current = 0;
+      var total = slides.length;
+      var autoTimer = null;
+
+      // Create dots
+      slides.forEach(function(_, idx){
+        var btn = document.createElement('button');
+        btn.className = 'slider-dot' + (idx === 0 ? ' active' : '');
+        btn.setAttribute('type','button');
+        btn.addEventListener('click', function(){
+          goTo(idx);
+          resetAuto();
+        });
+        dotsWrap.appendChild(btn);
+      });
+
+      var dots = Array.prototype.slice.call(dotsWrap.querySelectorAll('.slider-dot'));
+
+      function goTo(index){
+        if(index < 0) index = total - 1;
+        if(index >= total) index = 0;
+        current = index;
+        track.style.transform = 'translateX(' + (-100 * current) + '%)';
+        dots.forEach(function(d,i){
+          d.classList.toggle('active', i === current);
+        });
+      }
+
+      function next(){
+        goTo(current + 1);
+      }
+
+      function resetAuto(){
+        if(autoTimer) clearInterval(autoTimer);
+        autoTimer = setInterval(next, 6000);
+      }
+
+      resetAuto();
+    })();
+  </script>
 
 </body>
 </html>
