--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>About URP — Uttarakhand Reform Party</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Uttarakhand Reform Party (URP) उत्तराखंड में सेवा, ईमानदारी और परिणाम-आधारित राजनीति को आगे बढ़ाने वाला एक सुधारवादी राजनीतिक मंच है।">
+  <meta name="description" content="About Uttarakhand Reform Party (URP) — a reform-focused political platform committed to transparent governance and sustainable development in Uttarakhand.">
 
   <style>
     :root{
@@ -23,6 +23,7 @@
     }
     a{text-decoration:none;color:inherit}
 
+    /* HEADER */
     .header{
       background:linear-gradient(90deg,var(--primary),#3b6df3);
       color:#fff;
@@ -74,23 +75,12 @@
       border-bottom:2px solid var(--accent);
     }
 
+    /* HERO */
     .hero{
-      padding:46px 0 26px;
+      padding:48px 0 28px;
       background:
         radial-gradient(circle at top left,#e1ecff,transparent 55%),
         radial-gradient(circle at bottom right,#ffe7c7,transparent 55%);
-    }
-    .hero-title{
-      font-size:30px;
-      line-height:1.3;
-      color:#0b2b4a;
-      font-weight:800;
-      margin-bottom:6px;
-    }
-    .hero-sub{
-      font-size:15px;
-      color:#1f2933;
-      max-width:720px;
     }
     .hero-kicker{
       font-size:12px;
@@ -99,25 +89,28 @@
       color:var(--muted);
       margin-bottom:6px;
     }
+    .hero-title{
+      font-size:30px;
+      line-height:1.3;
+      color:#0b2b4a;
+      font-weight:800;
+      margin-bottom:8px;
+    }
+    .hero-sub{
+      font-size:15px;
+      color:#1f2933;
+      max-width:760px;
+    }
 
     .section{
-      padding:30px 0;
+      padding:32px 0;
     }
     .section-header{
-      display:flex;
-      flex-wrap:wrap;
-      justify-content:space-between;
-      gap:10px;
       margin-bottom:16px;
     }
     .section-header h2{
       font-size:22px;
       color:#111827;
-    }
-    .section-header p{
-      font-size:13px;
-      color:var(--muted);
-      max-width:420px;
     }
     .two-col{
       display:grid;
@@ -159,20 +152,6 @@
       font-size:18px;
       line-height:1;
     }
-    .tag-row{
-      display:flex;
-      flex-wrap:wrap;
-      gap:6px;
-      margin-top:6px;
-    }
-    .tag{
-      font-size:11px;
-      border-radius:999px;
-      padding:3px 8px;
-      background:#eef2ff;
-      color:#3730a3;
-    }
-    .small{font-size:12px;color:var(--muted);}
 
     .footer{
       background:#0b2b4a;
@@ -197,135 +176,123 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="header">
-    <div class="container nav">
-      <div class="logo-wrap">
-        <img src="logo%20urp.png" alt="URP logo" class="logo-img">
-        <div class="brand-title">Uttarakhand Reform Party</div>
-      </div>
-      <nav class="navlinks">
-        <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="vision.html">Vision</a>
-        <a href="join.html">Join</a>
-        <a href="candidates.html">Candidates</a>
-        <a href="contact.html">Contact</a>
-      </nav>
+<header class="header">
+  <div class="container nav">
+    <div class="logo-wrap">
+      <img src="logo%20urp.png" alt="URP logo" class="logo-img">
+      <div class="brand-title">Uttarakhand Reform Party</div>
     </div>
-  </header>
+    <nav class="navlinks">
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="vision.html">Vision</a>
+      <a href="join.html">Join</a>
+      <a href="candidates.html">Candidates</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-  <main>
-    <!-- HERO -->
-    <section class="hero">
-      <div class="container">
-        <div class="hero-kicker">परिचय • URP</div>
-        <h1 class="hero-title">URP — सत्ता नहीं, सुधार की राजनीति</h1>
-        <p class="hero-sub">
-          Uttarakhand Reform Party (URP) उन नागरिकों का मंच है जो मानते हैं कि 
-          “पुरानी राजनीति से नया भविष्य नहीं बन सकता।”  
-          URP का उद्देश्य है कि उत्तराखंड में राजनीति फिर से <strong>सेवा, ईमानदारी और नतीजा देने वाले काम</strong> पर केंद्रित हो।
+<main>
+
+<section class="hero">
+  <div class="container">
+    <div class="hero-kicker">ABOUT URP</div>
+    <h1 class="hero-title">Who We Are</h1>
+    <p class="hero-sub">
+      Uttarakhand Reform Party (URP) is a citizen-led political platform focused on strengthening governance, improving public accountability and creating balanced development across Uttarakhand. Our approach is rooted in practicality, transparency and long-term structural reform.
+    </p>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container two-col">
+
+    <div>
+      <div class="section-header">
+        <h2>Our Background</h2>
+      </div>
+      <p class="card" style="font-size:13px;color:var(--muted);">
+        URP emerged from continuous interaction with citizens, professionals, social workers and community leaders who shared a common concern — the need for visible improvement in governance quality and delivery systems. The party focuses on structured planning, local engagement and measurable development outcomes rather than personality-driven politics.
+      </p>
+      <ul class="timeline" style="margin-top:12px;">
+        <li>Community-driven political formation.</li>
+        <li>Focus on accountability and institutional reform.</li>
+        <li>Inclusive representation from diverse regions of Uttarakhand.</li>
+      </ul>
+    </div>
+
+    <div>
+      <div class="card">
+        <h3>Core Philosophy</h3>
+        <p>
+          URP believes political leadership must be guided by ethical governance, social responsibility and sustainable development models that strengthen both urban and rural communities.
         </p>
       </div>
-    </section>
 
-    <!-- STORY + PRINCIPLES -->
-    <section class="section">
-      <div class="container two-col">
-        <div>
-          <div class="section-header">
-            <h2>हमारी कहानी</h2>
-          </div>
-          <p class="small" style="margin-bottom:10px;">
-            पिछले दो दशकों में उत्तराखंड ने कई बार सरकारें बदलते देखीं, लेकिन आम नागरिक की मुख्य समस्याएँ  
-            — पलायन, बेरोज़गारी, स्वास्थ्य और शिक्षा — आज भी पूरी तरह हल नहीं हो पाईं।  
-            URP ऐसे लोगों की टीम से बना है जो केवल शिकायत नहीं, बल्कि <strong>समाधान-आधारित राजनीति</strong> चाहते हैं।
-          </p>
-          <ul class="timeline">
-            <li>शुरुआत युवाओं, भूतपूर्व सैनिकों, पेशेवरों और सामाजिक कार्यकर्ताओं की अनौपचारिक बैठकों से हुई।</li>
-            <li>चुनावी गणित से पहले ज़मीन की हकीकत, आँकड़ों, सर्वे और सीधे जनता के feedback पर ध्यान।</li>
-            <li>UKD जैसी क्षेत्रीय भावनाओं को आधुनिक और पेशेवर तरीके से मज़बूत करने की सोच — टकराव नहीं, साथ लेकर चलने का प्रयास।</li>
-          </ul>
-        </div>
-
-        <div>
-          <div class="card">
-            <h3>मूल सिद्धांत</h3>
-            <p class="small">
-              हमारा सरल प्रश्न है — <strong>“सत्ता मिले या न मिले, क्या यह कदम राज्य के लिए वास्तविक सुधार लाएगा?”</strong>  
-              हर नीति, हर सार्वजनिक बयान और हर समझौते को इसी कसौटी पर परखा जाएगा।
-            </p>
-            <div class="tag-row">
-              <div class="tag">सुधार पहले</div>
-              <div class="tag">तथ्य-आधारित नीति</div>
-              <div class="tag">पहाड़-प्रथम दृष्टि</div>
-            </div>
-          </div>
-          <div class="card" style="margin-top:12px;">
-            <h4>हमारा वादा</h4>
-            <p class="small">
-              URP किसी एक व्यक्ति की निजी पार्टी नहीं, बल्कि ऐसी टीम का मंच है जो अपने नाम या पद से ज़्यादा  
-              <strong>सिस्टम बदलने की साख</strong> पर भरोसा रखती है।  
-              लक्ष्य है कि राजनीति फिर से समाज-सेवा और जवाबदेही का माध्यम बने।
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- VALUES + CULTURE -->
-    <section class="section">
-      <div class="container two-col">
-        <div>
-          <div class="section-header">
-            <h2>मूल मूल्य</h2>
-            <p>URP के साथ काम करने वाले हर व्यक्ति से इन मूल मूल्यों पर स्पष्ट प्रतिबद्धता ली जाएगी।</p>
-          </div>
-          <div class="card">
-            <ul class="timeline">
-              <li><strong>ईमानदारी और पारदर्शिता</strong> — निजी जीवन और सार्वजनिक निर्णय, दोनों में साफ़ चरित्र और खुलापन।</li>
-              <li><strong>स्थानीय सम्मान</strong> — पहाड़, मैदान, शहर और गाँव; हर क्षेत्र और हर समुदाय की आवाज़ को बराबर महत्व।</li>
-              <li><strong>युवा और महिला नेतृत्व</strong> — केवल मंच सजाने के लिए नहीं, बल्कि निर्णय लेने की पहली पंक्ति में युवा और महिलाएँ।</li>
-              <li><strong>समाधान की राजनीति</strong> — हर आलोचना के साथ ठोस विकल्प और व्यावहारिक road-map पेश करना।</li>
-            </ul>
-          </div>
-        </div>
-
-        <div>
-          <div class="section-header">
-            <h2>संगठनात्मक संस्कृति</h2>
-          </div>
-          <div class="card">
-            <h4>हम कैसी पार्टी बनना चाहते हैं?</h4>
-            <ul class="timeline">
-              <li>जहाँ अंदरूनी लोकतंत्र हो — टिकट और पद केवल ऊपर से तय न हों, बल्कि प्रक्रिया और सुझाव से तय हों।</li>
-              <li>जहाँ स्वयंसेवकों को सिर्फ़ पोस्टर लगाने के लिए नहीं, बल्कि विचार-विमर्श और निर्णय में भी जगह मिले।</li>
-              <li>जहाँ रणनीति अफ़वाहों पर नहीं, बल्कि डेटा, शोध और ज़मीनी सर्वे पर बने।</li>
-              <li>जहाँ गलती मान लेना कमजोरी नहीं, बल्कि सीखने और सुधारने की ताकत माना जाए।</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container footer-grid">
-      <div>
-        <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">Reform-focused political platform for Uttarakhand.</div>
-      </div>
-      <div class="small">
-        <div>Contact: contact@uttarakhandreform.org</div>
-        <div>Phone: +91 98765 43210</div>
-      </div>
-      <div class="small">
-        <div><a href="join.html">Volunteer / Join</a></div>
-        <div><a href="candidates.html">Apply as Candidate</a></div>
+      <div class="card" style="margin-top:14px;">
+        <h4>Our Commitment</h4>
+        <p>
+          We are committed to creating a transparent political environment that respects public trust, encourages citizen participation and focuses on practical problem-solving.
+        </p>
       </div>
     </div>
-  </footer>
+
+  </div>
+</section>
+
+<section class="section">
+  <div class="container two-col">
+
+    <div>
+      <div class="section-header">
+        <h2>Core Values</h2>
+      </div>
+      <div class="card">
+        <ul class="timeline">
+          <li>Integrity and Transparency in decision-making.</li>
+          <li>Equal respect for all regions and communities.</li>
+          <li>Youth and women participation in leadership roles.</li>
+          <li>Evidence-based governance and policy planning.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div>
+      <div class="section-header">
+        <h2>Organisational Culture</h2>
+      </div>
+      <div class="card">
+        <ul class="timeline">
+          <li>Inclusive internal structure and open dialogue.</li>
+          <li>Ground-level participation and decentralised leadership.</li>
+          <li>Transparency in operations and communication.</li>
+          <li>Continuous learning and accountability mechanisms.</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+</main>
+
+<footer class="footer">
+  <div class="container footer-grid">
+    <div>
+      <div>© 2025 Uttarakhand Reform Party</div>
+      <div class="small">Reform-focused political platform for Uttarakhand.</div>
+    </div>
+    <div class="small">
+      <div>Contact: contact@uttarakhandreform.org</div>
+      <div>Phone: +91 98765 43210</div>
+    </div>
+    <div class="small">
+      <div><a href="join.html">Volunteer / Join</a></div>
+      <div><a href="candidates.html">Apply as Candidate</a></div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
